chore: remove sonar code smells